Fixed BedPlaceholderExpansion to actually return values and also added debugging logs to the GameRunningListener to give feedback on teams and their respective beds.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,7 +13,7 @@ permissions:
 commands:
   vsba:
     description: "Main root command for V-SBA"
-    usage: "/vsba <arg>"
+    usage: "/<command> <arg>"
     aliases: [v_sba, vickysba]
     permission: vsba.admin
     permission-message: "You can't do that... Or can you? O.O"
