--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,10 @@
             <version>2.11.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.incendo</groupId>
+            <artifactId>cloud-paper</artifactId>
+            <version>2.0.0-beta.9</version>
+        </dependency>
     </dependencies>
 </project>
