--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,11 @@
             <artifactId>cloud-paper</artifactId>
             <version>2.0.0-beta.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.example.vicky_utils</groupId>
+            <artifactId>v-utls</artifactId>
+            <version>0.0.1-BETA</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
